# RealEngine

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
RealEngine/: Button.cpp  Button.hpp  CMakeLists.txt  ClosedList.cpp  ClosedList.hpp  CursorDrawer.cpp  CursorDrawer.hpp  Error.cpp  Error.hpp  Font.cpp  Font.hpp  FontCache.cpp  FontCache.hpp  GeometryBatch.cpp  GeometryBatch.hpp  Incrementer.cpp  Incrementer.hpp  InputManager.cpp  InputManager.hpp  KeyBinder.hpp  LanguageManager.hpp  MainProgram.cpp  MainProgram.hpp  Menu.hpp  MenuParser.hpp  PlainText.cpp  PlainText.hpp  RealEngine.cpp  RealEngine.hpp  ResourceManager.cpp  ResourceManager.hpp  Room.cpp  Room.hpp  RoomVector.cpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramCache.cpp  ShaderProgramCache.hpp  Slider.cpp  Slider.hpp  (+41 more)
RealEngine/GUI/: Button.cpp  Button.hpp  CMakeLists.txt  ClosedList.cpp  ClosedList.hpp  Controller.hpp  Menu.hpp  MenuParser.hpp  PlainText.cpp  PlainText.hpp  Slider.cpp  Slider.hpp  TextField.cpp  TextField.hpp
RealEngine/graphics/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CursorDrawer.cpp  CursorDrawer.hpp  Font.cpp  Font.hpp  GeometryBatch.cpp  GeometryBatch.hpp  PerFrameInFlight.cpp  PerFrameInFlight.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Surface.cpp  Surface.hpp  UniformBuffer.cpp  UniformBuffer.hpp  UniformManager.cpp  UniformManager.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  View.cpp  View.hpp  Viewport.cpp  Viewport.hpp  default_shaders.hpp  geometric_shapes.hpp
RealEngine/graphics/batches/: GeometryBatch.cpp  GeometryBatch.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp
RealEngine/graphics/buffers/: Buffer.cpp  Buffer.hpp  BufferMapped.hpp  BufferType.hpp  CMakeLists.txt  IndexedTargetBuffer.hpp  InterfaceBlockBuffer.hpp  ShaderStorageBuffer.hpp  TypedBuffer.cpp  TypedBuffer.hpp  types.hpp
RealEngine/graphics/cameras/: CMakeLists.txt  FlyingCamera3D.cpp  FlyingCamera3D.hpp  View2D.cpp  View2D.hpp
RealEngine/graphics/descriptors/: DescriptorSet.cpp  DescriptorSet.hpp
RealEngine/graphics/internal_interfaces/: IShaderProgram.hpp
RealEngine/graphics/internal_renderers/: CMakeLists.txt  GL46_Buffer.cpp  GL46_Buffer.hpp  GL46_Renderer.cpp  GL46_Renderer.hpp  GL46_ShaderProgram.cpp  GL46_ShaderProgram.hpp  GL46_VertexArray.cpp  GL46_VertexArray.hpp  GL46_Viewport.cpp  GL46_Viewport.hpp
RealEngine/graphics/output/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp
RealEngine/graphics/output_control/: CMakeLists.txt  RenderPass.cpp
RealEngine/graphics/pipelines/: Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  PipelineSources.hpp  Vertex.hpp
RealEngine/graphics/renderers/: CMakeLists.txt  GL46_Buffer.cpp  GL46_Buffer.hpp  GL46_Renderer.cpp  GL46_Renderer.hpp  GL46_ShaderProgram.cpp  GL46_ShaderProgram.hpp  GL46_VertexArray.cpp  GL46_VertexArray.hpp  GL46_Viewport.cpp  GL46_Viewport.hpp  IBuffer.hpp  IShaderProgram.hpp  IVertexArray.hpp
RealEngine/graphics/synchronization/: CMakeLists.txt  DoubleBuffered.cpp  DoubleBuffered.hpp  Fence.cpp  Fence.hpp  Semaphore.cpp
RealEngine/graphics/texture/: CMakeLists.txt  Texture.cpp  Texture.hpp  TextureFlags.cpp  TextureFlags.hpp  (+8 more)
RealEngine/main/: CMakeLists.txt  CommandLineArguments.hpp  Error.cpp  Error.hpp  MainProgram.cpp  MainProgram.hpp  RealEngine.cpp  RealEngine.hpp  Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp  RoomVector.cpp  RoomVector.hpp  Synchronizer.cpp  Synchronizer.hpp  Window.cpp  Window.hpp  WindowSettings.cpp  WindowSettings.hpp
RealEngine/program/: CMakeLists.txt  CommandLineArguments.hpp  CommandLineArguments.ixx  MainProgram.cpp  MainProgram.cxx  MainProgram.hpp  MainProgram.ixx  Synchronizer.cpp  Synchronizer.cxx  Synchronizer.hpp  Synchronizer.ixx
RealEngine/renderer/: Allocator.hpp  CMakeLists.txt  DeletionQueue.cpp  DeletionQueue.hpp  VulkanDeletionQueue.cpp  VulkanDeletionQueue.hpp  VulkanFixture.cpp  VulkanFixture.hpp  VulkanObject.hpp
RealEngine/rendering/: BasicShaders.ixx  CMakeLists.txt  Capabilities.cpp  Capabilities.cxx  Capabilities.hpp  Capabilities.ixx  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Ordering.cpp  Ordering.cxx  Ordering.hpp  Ordering.ixx  PerFrameInFlight.cpp  PerFrameInFlight.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.hpp  Renderer.ixx  RendererGL46.hpp  RendererLateBind.hpp  all_renderers.hpp  basic_shaders.hpp  capabilities.cpp  capabilities.hpp
RealEngine/resources/: CMakeLists.txt  FontCache.cpp  FontCache.hpp  PNGLoader.cpp  PNGLoader.hpp  ResourceManager.cpp  ResourceManager.cxx  ResourceManager.hpp  ResourceManager.ixx  ShaderProgramCache.cpp  ShaderProgramCache.hpp  TextureCache.cpp  TextureCache.cxx  TextureCache.hpp  TextureCache.ixx
RealEngine/rooms/: CMakeLists.txt  Room.cpp  Room.cxx  Room.hpp  Room.ixx  RoomDisplaySettings.hpp  RoomDisplaySettings.ixx  RoomManager.cpp  RoomManager.cxx  RoomManager.hpp  RoomManager.ixx  RoomToEngineAccess.cpp  RoomToEngineAccess.cxx  RoomToEngineAccess.hpp  RoomToEngineAccess.ixx  RoomTransitionArguments.hpp  RoomTransitionParameters.ixx
RealEngine/user_input/: CMakeLists.txt  InputManager.cpp  InputManager.cxx  InputManager.hpp  InputManager.ixx  Key.cpp  Key.cxx  Key.hpp  Key.ixx  KeyBinder.hpp  KeyBinder.ixx  TypingHandle.cpp  TypingHandle.hpp
RealEngine/utility/: CMakeLists.txt  Endianness.hpp  Endianness.ixx  Error.cpp  Error.cxx  Error.hpp  Error.ixx  GLTypeToString.cpp  GLTypeToString.cxx  GLTypeToString.hpp  GLTypeToString.ixx  LanguageManager.hpp  Math.ixx  Math_.hpp  endianness.hpp  error.cpp  error.hpp  math.hpp  tupleUp.hpp  utility.cpp  utility.hpp
RealEngine/window/: CMakeLists.txt  GL46Fixture.cpp  GL46Fixture.hpp  VK13Fixture.cpp  VK13Fixture.hpp  Window.cpp  Window.cxx  Window.hpp  Window.ixx  WindowSettings.cpp  WindowSettings.cxx  WindowSettings.hpp  WindowSettings.ixx  WindowSubsystems.cpp  WindowSubsystems.cxx  WindowSubsystems.hpp  WindowSubsystems.ixx
(+615 files in other folders)
